--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 main {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
+  background-color: #001a38;
 }
 
 .filterQ {
