--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ main {
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: red;
-  /* background-color: #001a38; */
+  /* background-color: red; */
+  background-color: #001a38;
 }
 
 .filterQ {
