--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ main {
   height: 100%;
   min-height: 100vh;
   /* background-color: red; */
-  background-color: #001a38;
+  background-color: #012044;
 }
 
 .filterQ {
